--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   lpmonitor-gui:
     restart: always
-    image: seapapa/lpmonitor-gui:arm64_2.2
+    image: seapapa/lpmonitor-gui:arm64_2.4
     network_mode: host
     container_name: lpmonitor-gui
     environment:
@@ -26,10 +26,14 @@ services:
 
   lpmonitor:
     restart: always
-    image: seapapa/lpmonitor:arm64_2.2
+    image: seapapa/lpmonitor:arm64_2.4
     network_mode: host
     container_name: lpmonitor
     privileged: true
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
     volumes:
       - $HOME:/data
       - /dev/:/dev/
